@@ -2252,3 +2252,4 @@ tab.wishlist.material.hint.yellow,Yellow,Yellow,Gelb,Amarillo,Jaune,Amarelo,Же
 tab.wishlist.material.hint.yellow.explain,"You own enough of this material, but you need to collect some from your fleetcarrier","You own enough of this material, but you need to collect some from your fleetcarrier","Sie besitzen genug von diesem Material, aber Sie müssen einige von Ihrem FleetCarrier sammeln","Usted posee lo suficiente de este material, pero debe recolectar algunos de su FleetCarrier","Vous possédez suffisamment de ce matériel, mais vous devez en collecter quelques-uns de votre fleetcarrier","Você possui o suficiente desse material, mas precisa coletar alguns do seu FleetCarrier","У вас есть достаточно этого материала, но вам нужно собрать некоторые из своего Fleetcarrier"
 tab.wishlist.material.hint.green,Green,Green,Grün,Verde,Vert,Verde,Зеленый
 tab.wishlist.material.hint.green.explain,You have the required amount of this material,You have the required amount of this material,Sie haben die erforderliche Menge dieses Materials,Tiene la cantidad requerida de este material,Vous avez le montant requis de ce matériel,Você tem a quantidade necessária deste material,У вас есть необходимое количество этого материала
+tab.wishlist.travel.path.column.blueprints.blueprint.horizons.experimental,"⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}","⁃ {0} - {1}{2,choice,1#|1< ({2})}"
